<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.western.cs.matchinggame.MainActivity"
    android:orientation="vertical"
    android:layout_weight="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/Orange"
        android:layout_gravity="center"
        android:weightSum="1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeimage"
            android:src="@drawable/bonnie"
            android:maxHeight="160dp"
            android:maxWidth="160dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingTop="10dp"
            android:layout_gravity="center"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="30dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/welcome_message"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/WhiteSmoke"
        android:weightSum="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/play_comparison"
            android:onClick="start_compare"
            android:text="@string/start_comparison"/>

        <Button
            android:id="@+id/play_mc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"
            android:text="@string/start_mc"
            android:visibility="gone" />

        <Button
            android:id="@+id/about_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="to_site"
            android:padding="20dp"
            android:text="@string/about" />

        <Button
            android:id="@+id/care_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"
            android:text="@string/visit_care"
            android:visibility="gone" />


    </LinearLayout>
</LinearLayout>