<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ComparisonGame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        android:padding="10dp"
        android:background="@color/Orange">

        <ImageButton
            android:id="@+id/comparisonLeftImage"
            android:onClick="onLeftPicturePress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:maxHeight="200dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_launcher_background" />

        <ImageButton
            android:id="@+id/comparisonRightImage"
            android:onClick="onRightPicturePress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxHeight="200dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_launcher_background" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange">

        <ImageView
            android:id="@+id/guessResultLeft"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="50dp"
            android:adjustViewBounds="true"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/guessResultRight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="75dp"
            android:adjustViewBounds="true"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:scaleType="fitCenter" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:gravity="center_horizontal"
        android:id="@+id/comparisonDescription"
        android:text="@string/guess_comparison"
        android:padding="30dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:text="@string/next"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:id="@+id/next_button"
        android:onClick="onNextPress"
        android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:layout_weight="3"
            android:text="You've named 0 out of 0 animals correctly" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:text="@string/quit"
        android:padding="5dp"
        android:id="@+id/quit_button"
        android:onClick="onQuitPress"
        android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>